force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Report_Name__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Name of payroll report from payroll system</inlineHelpText>
    <label>Payroll Report Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>