force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Vendor__c</fullName>
    <description>Payroll Vendor used by EPS clients</description>
    <inlineHelpText>Payroll Vendor used by EPS clients</inlineHelpText>
    <label>Payroll Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Intuit/Quickbooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>