force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Vendor_Email__c</fullName>
    <inlineHelpText>Email field for the payroll contact at the payroll provider</inlineHelpText>
    <label>Payroll Vendor Email</label>
    <type>Email</type>
</CustomField>