force-app/main/default/objects/Add_On_Products__c/fields/Payroll_Vendor_Fees__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Vendor_Fees__c</fullName>
    <description>Fees charged by payroll vendor for EPS clients</description>
    <inlineHelpText>Fees charged by payroll vendor for EPS clients</inlineHelpText>
    <label>Payroll Vendor Fees</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>