force-app/main/default/objects/Add_On_Products__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan associated with the Add-On Product</description>
    <inlineHelpText>Plan associated with the Add-On Product</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Add-On Products</relationshipLabel>
    <relationshipName>Add_On_Products</relationshipName>
    <type>Lookup</type>
</CustomField>