force-app/main/default/objects/Add_On_Products__c/fields/Platform_Username__c.field-meta.xml
<CustomField>
    <fullName>Platform_Username__c</fullName>
    <label>Platform Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>