force-app/main/default/objects/Add_On_Products__c/fields/Pretax_Catchup__c.field-meta.xml
<CustomField>
    <fullName>Pretax_Catchup__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Payroll column name for Pretax Catchup source</inlineHelpText>
    <label>Pretax Catchup Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>