force-app/main/default/objects/Add_On_Products__c/fields/Pretax_Source_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Pretax_Source_Header_Name__c</fullName>
    <label>Pretax Source Header Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>