force-app/main/default/objects/Add_On_Products__c/fields/Primary_Payroll_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payroll_Offset_Days__c</fullName>
    <label>Primary Payroll Offset Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>