force-app/main/default/objects/Add_On_Products__c/fields/Primary_Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payroll_Schedule__c</fullName>
    <description>This is the Payroll Schedule in Paradigm</description>
    <formula>TEXT(Plan__r.Payroll_Schedule__c)</formula>
    <inlineHelpText>This is the Payroll Schedule in Paradigm. This field is pulled through the Plan Object. If it needs to be updated, please update it in the Plan and ensure they are linked.</inlineHelpText>
    <label>Primary Payroll Schedule</label>
    <type>Text</type>
</CustomField>