force-app/main/default/objects/Add_On_Products__c/fields/Product_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Effective_Date__c</fullName>
    <description>Date Add-On Product is effective</description>
    <inlineHelpText>Date Add-On Product is effective</inlineHelpText>
    <label>Product Effective Date</label>
    <type>Date</type>
</CustomField>