force-app/main/default/objects/Add_On_Products__c/fields/Product_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Reason__c</fullName>
    <description>Reason Client is ending Product</description>
    <inlineHelpText>Reason Client is ending Product</inlineHelpText>
    <label>Product End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Transitioning from Ubiquity</fullName>
            </value>
            <value>
                <fullName>No Need</fullName>
            </value>
            <value>
                <fullName>Ease of Use</fullName>
            </value>
            <value>
                <fullName>Using New Integration</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Webform Preferred</fullName>
            </value>
            <value>
                <fullName>Doesn’t want to provide full access</fullName>
            </value>
            <value>
                <fullName>Doesn’t want to provide login credentials</fullName>
            </value>
            <value>
                <fullName>Payroll is not cloud base</fullName>
            </value>
            <value>
                <fullName>Payroll doesn’t qualify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>