force-app/main/default/objects/Add_On_Products__c/fields/Product_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Notes__c</fullName>
    <label>Product Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>