force-app/main/default/objects/Add_On_Products__c/fields/Product_Saved_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Saved_Date__c</fullName>
    <description>Date Product is saved after it has been Stalled</description>
    <inlineHelpText>Date Product is saved after it has been Stalled</inlineHelpText>
    <label>Product Saved Date</label>
    <type>Date</type>
</CustomField>