force-app/main/default/objects/Add_On_Products__c/fields/Product_Saved_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Saved_Notes__c</fullName>
    <description>Add notes from un-stalling the integration.</description>
    <inlineHelpText>Add notes from un-stalling the integration.</inlineHelpText>
    <label>Product Saved Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>