force-app/main/default/objects/Add_On_Products__c/fields/Product_Stage__c.field-meta.xml
<CustomField>
    <fullName>Product_Stage__c</fullName>
    <label>Product Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Evaluate Fit &amp; Collect Information</fullName>
            </value>
            <value>
                <fullName>3. Activate Integration</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Pending Provider Access</fullName>
            </value>
            <value>
                <fullName>Login Credentials Received</fullName>
            </value>
            <value>
                <fullName>Incorrect Access Level</fullName>
            </value>
            <value>
                <fullName>Follow Up Sent</fullName>
            </value>
            <value>
                <fullName>Integration Stalled - No Response</fullName>
            </value>
            <value>
                <fullName>Pending First Payroll Submission</fullName>
            </value>
            <value>
                <fullName>Awaiting Vendor Response</fullName>
            </value>
            <value>
                <fullName>Operation Set Up In Progress</fullName>
            </value>
            <value>
                <fullName>Pending First EPS Upload</fullName>
            </value>
            <value>
                <fullName>Reviewing Test Files</fullName>
            </value>
            <value>
                <fullName>Test Files Reviewed - Corrections Needed</fullName>
            </value>
            <value>
                <fullName>Test Files Passed - Pending First Payroll</fullName>
            </value>
            <value>
                <fullName>Integration Complete</fullName>
            </value>
            <value>
                <fullName>1. Evaluate Fit</fullName>
                <isActive>false</isActive>
                <label>1. Evaluate Fit</label>
            </value>
            <value>
                <fullName>2. Configure &amp; Test</fullName>
                <isActive>false</isActive>
                <label>2. Configure &amp; Test</label>
            </value>
            <value>
                <fullName>4. Completed Integration Setup</fullName>
                <isActive>false</isActive>
                <label>4. Completed Integration Setup</label>
            </value>
            <value>
                <fullName>4. Completed Setup</fullName>
                <isActive>false</isActive>
                <label>4. Completed Setup</label>
            </value>
            <value>
                <fullName>a: New Integration Request</fullName>
                <isActive>false</isActive>
                <label>a: New Integration Request</label>
            </value>
            <value>
                <fullName>b: Introduction Email Sent</fullName>
                <isActive>false</isActive>
                <label>b: Introduction Email Sent</label>
            </value>
            <value>
                <fullName>c: Evaulated Fit</fullName>
                <isActive>false</isActive>
                <label>c: Evaulated Fit</label>
            </value>
            <value>
                <fullName>d: Requested Authorization Form &amp; Login Instructions</fullName>
                <isActive>false</isActive>
                <label>d: Requested Authorization Form &amp; Login Instructions</label>
            </value>
            <value>
                <fullName>e: Received Authorization Form</fullName>
                <isActive>false</isActive>
                <label>e: Received Authorization Form</label>
            </value>
            <value>
                <fullName>f: Configured Paradigm</fullName>
                <isActive>false</isActive>
                <label>f: Configured Paradigm</label>
            </value>
            <value>
                <fullName>f: Received Login Credentials</fullName>
                <isActive>false</isActive>
                <label>f: Received Login Credentials</label>
            </value>
            <value>
                <fullName>g: Closed EPS Opportunity</fullName>
                <isActive>false</isActive>
                <label>g: Closed EPS Opportunity</label>
            </value>
            <value>
                <fullName>g: Configured Salesforce; pending test files</fullName>
                <isActive>false</isActive>
                <label>g: Configured Salesforce; pending test files</label>
            </value>
            <value>
                <fullName>h. Reviewed Test Files- Failed</fullName>
                <isActive>false</isActive>
                <label>h. Reviewed Test Files- Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>