force-app/main/default/objects/Add_On_Products__c/fields/Product_Stall_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Stall_Date__c</fullName>
    <description>Date Product is identified as being Stalled</description>
    <inlineHelpText>Date Product is identified as being Stalled</inlineHelpText>
    <label>Product Stall Date</label>
    <type>Date</type>
</CustomField>