force-app/main/default/objects/Add_On_Products__c/fields/Product_Stalled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Stalled_Reason__c</fullName>
    <description>Reason for Product stall</description>
    <inlineHelpText>Reason for Product stall</inlineHelpText>
    <label>Product Stalled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Client Backing Out</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Client - incomplete set up with Partner</fullName>
            </value>
            <value>
                <fullName>Missing employee data (client)</fullName>
            </value>
            <value>
                <fullName>Client – Pending NP Implementation</fullName>
            </value>
            <value>
                <fullName>Partner needs a system fix/build</fullName>
            </value>
            <value>
                <fullName>UBQT needs a System fix</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Implementation in Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>