force-app/main/default/objects/Add_On_Products__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <description>Various stages of Add-On Product</description>
    <inlineHelpText>Various stages of Add-On Product</inlineHelpText>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Vendor Response</fullName>
            </value>
            <value>
                <fullName>New Integration Request</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Stalled Setup</fullName>
            </value>
            <value>
                <fullName>Cancelled Setup</fullName>
            </value>
            <value>
                <fullName>Terminated Integration</fullName>
            </value>
            <value>
                <fullName>Completed Setup</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Login Credentials Requested</fullName>
            </value>
            <value>
                <fullName>Source Mapping Received</fullName>
            </value>
            <value>
                <fullName>5500 Extension Requested</fullName>
            </value>
            <value>
                <fullName>Complete &amp; Transitioning to TPI</fullName>
            </value>
            <value>
                <fullName>Product Stalled</fullName>
            </value>
            <value>
                <fullName>Product Saved</fullName>
            </value>
            <value>
                <fullName>No Start</fullName>
            </value>
            <value>
                <fullName>Product_Terminated</fullName>
                <label>Product Terminated</label>
            </value>
            <value>
                <fullName>Login Credentials Received</fullName>
            </value>
            <value>
                <fullName>Testing login access</fullName>
            </value>
            <value>
                <fullName>Login Access completed</fullName>
            </value>
            <value>
                <fullName>Source mapping requested</fullName>
            </value>
            <value>
                <fullName>Ready for test file review</fullName>
            </value>
            <value>
                <fullName>Test File Complete</fullName>
            </value>
            <value>
                <fullName>Trust Report Requested</fullName>
            </value>
            <value>
                <fullName>Trust Report Received</fullName>
            </value>
            <value>
                <fullName>1st Payroll Funded</fullName>
            </value>
            <value>
                <fullName>2nd Payroll Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Sponsor Action</fullName>
            </value>
            <value>
                <fullName>Test File Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>