force-app/main/default/objects/Add_On_Products__c/fields/Product_Termination_Complete__c.field-meta.xml
<CustomField>
    <fullName>Product_Termination_Complete__c</fullName>
    <description>Date Product Termination is complete</description>
    <inlineHelpText>Date Product Termination is complete</inlineHelpText>
    <label>Product Termination Complete</label>
    <type>Date</type>
</CustomField>