force-app/main/default/objects/Add_On_Products__c/fields/Product_Termination_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Termination_Notes__c</fullName>
    <label>Product Termination Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>