force-app/main/default/objects/Add_On_Products__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add-On Product</fullName>
            </value>
            <value>
                <fullName>Annual Audit</fullName>
            </value>
            <value>
                <fullName>Enhanced Payroll Services</fullName>
            </value>
            <value>
                <fullName>Payroll Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>