force-app/main/default/objects/Add_On_Products__c/fields/Profit_Sharing_in_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing_in_Payroll__c</fullName>
    <description>Survey data from EPS Survey</description>
    <inlineHelpText>Does the client payroll system allow for profit sharing contributions?</inlineHelpText>
    <label>Profit Sharing in Payroll</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>