force-app/main/default/objects/Add_On_Products__c/fields/Profit_Sharing_Source_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Profit_Sharing_Source_Header_Name__c</fullName>
    <label>Profit Sharing Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>