force-app/main/default/objects/Add_On_Products__c/fields/QA_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>QA_Check_Completed__c</fullName>
    <label>QA Check Completed</label>
    <type>Date</type>
</CustomField>