force-app/main/default/objects/Add_On_Products__c/fields/Qualified_for_Third_Party_Integration__c.field-meta.xml
<CustomField>
    <fullName>Qualified_for_Third_Party_Integration__c</fullName>
    <label>Qualified for Third Party Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>