force-app/main/default/objects/Add_On_Products__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <description>Date Product is requested to start (may be different from final Effective Date)</description>
    <inlineHelpText>Date Product is requested to start (may be different from final Effective Date)</inlineHelpText>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>