force-app/main/default/objects/Add_On_Products__c/fields/Requested_Revised_Test_Files__c.field-meta.xml
<CustomField>
    <fullName>Requested_Revised_Test_Files__c</fullName>
    <label>Requested Revised Test Files</label>
    <type>Date</type>
</CustomField>