force-app/main/default/objects/Add_On_Products__c/fields/Requested_Source_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Requested_Source_Mapping__c</fullName>
    <label>Requested Source Mapping</label>
    <type>Date</type>
</CustomField>