force-app/main/default/objects/Add_On_Products__c/fields/Reviewed_Test_File__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Test_File__c</fullName>
    <label>Reviewed Test File</label>
    <type>Date</type>
</CustomField>