force-app/main/default/objects/Add_On_Products__c/fields/ROTH_Catchup_Source_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>ROTH_Catchup_Source_Header_Name__c</fullName>
    <description>EPS Add on Product field - updated from EPS Survey</description>
    <inlineHelpText>Payroll column name for ROTH catchup source</inlineHelpText>
    <label>ROTH Catchup Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>