force-app/main/default/objects/Add_On_Products__c/fields/Roth_Source_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Roth_Source_Header_Name__c</fullName>
    <label>Roth Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>