force-app/main/default/objects/Add_On_Products__c/fields/Safe_Harbor_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Frequency__c</fullName>
    <description>EPS data from EPS Survey</description>
    <inlineHelpText>Safe Harbor contribution frequency</inlineHelpText>
    <label>Safe Harbor Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Payroll</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Safe Harbor Contributions not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>