force-app/main/default/objects/Add_On_Products__c/fields/Salesforce_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Plan_Status__c</fullName>
    <description>Plan Status in Salesforce</description>
    <formula>TEXT(Plan__r.Status__c)</formula>
    <inlineHelpText>Plan Status in Salesforce</inlineHelpText>
    <label>Salesforce Plan Status</label>
    <type>Text</type>
</CustomField>