force-app/main/default/objects/Add_On_Products__c/fields/Sampling_Followup_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Followup_Needed__c</fullName>
    <description>Was additional followup needed after initial sampling documents sent?</description>
    <inlineHelpText>Was additional followup needed after initial sampling documents sent?</inlineHelpText>
    <label>Sampling Followup Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>