force-app/main/default/objects/Add_On_Products__c/fields/Sampling_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Requested__c</fullName>
    <description>Date audit sampling is requested</description>
    <inlineHelpText>Date audit sampling is requested</inlineHelpText>
    <label>Sampling Requested</label>
    <type>Date</type>
</CustomField>