force-app/main/default/objects/Add_On_Products__c/fields/Sampling_Sent__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Sent__c</fullName>
    <description>Date Sampling is sent back to client</description>
    <inlineHelpText>Date Sampling is sent back to client</inlineHelpText>
    <label>Sampling Sent</label>
    <type>Date</type>
</CustomField>