force-app/main/default/objects/Add_On_Products__c/fields/Scheduled_Product_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Product_End_Date__c</fullName>
    <description>Date the Product use is scheduled to end</description>
    <inlineHelpText>Date the Product use is scheduled to end</inlineHelpText>
    <label>Scheduled Product End Date</label>
    <type>Date</type>
</CustomField>