force-app/main/default/objects/Add_On_Products__c/fields/Secondary_Payroll_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payroll_Offset_Days__c</fullName>
    <description>Number of Secondary Payroll Offset Days</description>
    <inlineHelpText>Number of Secondary Payroll Offset Days</inlineHelpText>
    <label>Secondary Payroll Offset Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>