force-app/main/default/objects/Add_On_Products__c/fields/Secondary_Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payroll_Schedule__c</fullName>
    <description>Secondary Payroll Schedule</description>
    <inlineHelpText>Secondary Payroll Schedule</inlineHelpText>
    <label>Secondary Payroll Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly (Offcycle)</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>