force-app/main/default/objects/Add_On_Products__c/fields/Secure_Files_Received__c.field-meta.xml
<CustomField>
    <fullName>Secure_Files_Received__c</fullName>
    <description>Files received using secure file transmission (payroll, census)</description>
    <inlineHelpText>Files received using secure file transmission (payroll, census)</inlineHelpText>
    <label>Secure Files Received</label>
    <type>Date</type>
</CustomField>