force-app/main/default/objects/Add_On_Products__c/fields/Sent_Completion_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_Completion_Email__c</fullName>
    <label>Sent Completion Email</label>
    <type>Date</type>
</CustomField>