force-app/main/default/objects/Add_On_Products__c/fields/Sent_Login_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Sent_Login_Test_Results__c</fullName>
    <label>Sent Login Test Results</label>
    <type>Date</type>
</CustomField>