force-app/main/default/objects/Add_On_Products__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enhanced Payroll Service</fullName>
            </value>
            <value>
                <fullName>CensiblyYours</fullName>
            </value>
            <value>
                <fullName>Edukate</fullName>
            </value>
            <value>
                <fullName>Direct Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>