force-app/main/default/objects/Add_On_Products__c/fields/SH_Match_Source_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>SH_Match_Source_Field_Name__c</fullName>
    <label>Safe Harbor Match Source Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>