force-app/main/default/objects/Add_On_Products__c/fields/Source_Mapping_Received__c.field-meta.xml
<CustomField>
    <fullName>Source_Mapping_Received__c</fullName>
    <label>Source Mapping Received</label>
    <type>Date</type>
</CustomField>