force-app/main/default/objects/Add_On_Products__c/fields/Taken_Back_From_3rd_Party_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Taken_Back_From_3rd_Party_Integrator__c</fullName>
    <label>Taken Back From 3rd Party Integrator</label>
    <type>Date</type>
</CustomField>