force-app/main/default/objects/Add_On_Products__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <label>Team Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pattie Parisi</fullName>
            </value>
            <value>
                <fullName>Sonia Boily</fullName>
            </value>
            <value>
                <fullName>Sue Cascio</fullName>
            </value>
            <value>
                <fullName>Stormy Bearry</fullName>
            </value>
            <value>
                <fullName>Brian Britt</fullName>
            </value>
            <value>
                <fullName>Aaron Fekete</fullName>
            </value>
            <value>
                <fullName>Melissa Srica</fullName>
                <isActive>false</isActive>
                <label>Melissa Srica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>