force-app/main/default/objects/Add_On_Products__c/fields/Tertiary_Payroll_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Payroll_Offset_Days__c</fullName>
    <description>Number of Offset Days for tertiary Payroll schedule</description>
    <inlineHelpText>Number of Offset Days for tertiary Payroll schedule</inlineHelpText>
    <label>Tertiary Payroll Offset Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>