force-app/main/default/objects/Add_On_Products__c/fields/Test_File_Received__c.field-meta.xml
<CustomField>
    <fullName>Test_File_Received__c</fullName>
    <description>Test File from Partner received</description>
    <inlineHelpText>Test File from Partner received</inlineHelpText>
    <label>Test File Received</label>
    <type>Date</type>
</CustomField>