force-app/main/default/objects/Add_On_Products__c/fields/Test_File_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_File_Review_Date__c</fullName>
    <description>Date Test File is reviewed</description>
    <inlineHelpText>Date Test File is reviewed</inlineHelpText>
    <label>Test File Review Date</label>
    <type>Date</type>
</CustomField>