force-app/main/default/objects/Add_On_Products__c/fields/Test_Files_Failed__c.field-meta.xml
<CustomField>
    <fullName>Test_Files_Failed__c</fullName>
    <inlineHelpText>Enter date when we learned the Test Files failed.</inlineHelpText>
    <label>Test Files Failed</label>
    <type>Date</type>
</CustomField>