force-app/main/default/objects/Add_On_Products__c/fields/Test_Files_Passed__c.field-meta.xml
<CustomField>
    <fullName>Test_Files_Passed__c</fullName>
    <description>Date that the test files were confirmed Passed.</description>
    <inlineHelpText>Date that the test files were confirmed Passed.</inlineHelpText>
    <label>Test Files Passed</label>
    <type>Date</type>
</CustomField>