force-app/main/default/objects/Add_On_Products__c/fields/Tested_Login_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Tested_Login_Credentials__c</fullName>
    <label>Tested Login Credentials</label>
    <type>Date</type>
</CustomField>