force-app/main/default/objects/Add_On_Products__c/fields/Third_Party_Integrator__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Integrator__c</fullName>
    <description>Name of Third Party Integrator (not direct Integration through Payroll Provider)</description>
    <inlineHelpText>Name of Third Party Integrator (not direct Integration through Payroll Provider)</inlineHelpText>
    <label>Third Party Integrator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>File_Submission_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Finch</fullName>
            </value>
            <value>
                <fullName>PayKonnect</fullName>
            </value>
            <value>
                <fullName>Payroll Integrations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>