force-app/main/default/objects/Add_On_Products__c/fields/Third_Party_Integrator_Fees__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Integrator_Fees__c</fullName>
    <label>Third Party Integrator Fees</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>